--- a/MAIN.html
+++ b/MAIN.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Vi</title>
+        <title>VIKTORIJA</title>
     </head>
     <body>
         <img src="logo_1.png" width="400" height="300"/>
