--- a/MAIN.html
+++ b/MAIN.html
@@ -8,7 +8,10 @@
         <ul>
             <li><h2><a href="https://www.modrinth.com/user/Vittoria">Resourcepacks</a></h2></li>
             <li><h2><a href="https://github.com/VittoriaAlata">GitHub</a></h2></li>
-          </ul>  
+        </ul>
+        <video controls autoplay>
+            <source src="test.mp4" type="video/mp4">
+           </video>  
         <hr>
 <!--<h2 style="font-size:52px;">Resourcepacks:</h2>      
 <p style="font-size:32px; text-align: center;"><a href="https://modrinth.com/resourcepack/azzurra">Azzurra</a></p>
