--- a/MAIN.html
+++ b/MAIN.html
@@ -1,23 +1,39 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>VIKTORIJA</title>
-    </head>
-    <body>
-        <img src="logo_1.png" width="400" height="300"/>
-        <h1 style="font-size: 57px;">Vittoria</h1>
-        <ul>
-            <li><h2><a href="https://www.modrinth.com/user/Vittoria">Resourcepacks</a></h2></li>
-            <li><h2><a href="https://github.com/VittoriaAlata">GitHub</a></h2></li>
-        </ul>
-        <video controls autoplay>
-            <source src="Alexander.mp4" type="video/mp4">
-           </video>
-        <p><a href="https://drive.google.com/drive/folders/1KT6gkAcxoCnljm1m7zJ8Hce9UohzsbC6?usp=sharing">Achromatopsia</a></p>
-        <hr>
-<!--<h2 style="font-size:52px;">Resourcepacks:</h2>      
-<p style="font-size:32px; text-align: center;"><a href="https://modrinth.com/resourcepack/azzurra">Azzurra</a></p>
-<p style="font-size:23px;">Azzurra seamlessly blends universal compatibility with innovative design. Experience an evolved Minecraft, where vanilla aesthetics meet enhanced visuals, shaders, and mod support. Immerse yourself in a unique and enriched gaming atmosphere</p>
-        <p style="font-size:32px; text-align: center;"><a href="https://modrinth.com/resourcepack/samotracia">Samotracia</a></p>
-        <p style="font-size:23px;">Samotracia, a captivating 64-palette resource pack, enhances Minecraft's graphics while preserving its pixelated charm. Inspired by CRT games, it offers a calming, welcoming atmosphere. Optimized for fabulous graphics, it ensures a unique gaming experience</p>-->    
-    </body>
+<head>
+    <title>Viktorija</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons/favicon-16x16.png">
+    <link rel="manifest" href="favicon_icons/site.webmanifest">
+    <style>
+        /* Stili per il layout flessibile */
+        .container {
+            display: flex; /* Utilizza il layout flessibile */
+            align-items: center; /* Allinea verticalmente al centro */
+        }
+        .content {
+            flex: 1; /* Flessibilità per adattarsi allo spazio disponibile */
+            margin-left: 20px; /* Aggiunge uno spazio tra l'immagine e il testo */
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <img src="images/logo.png" width="400" height="300"/>
+        <div class="content">
+            <h1 style="font-size: 57px;">Home Page - VittoriaAlata.github.io</h1>
+            <ul>
+                <li><h2><a href="resourcepack.html">Resourcepacks</a></h2></li>
+                <li><h2><a href="https://github.com/VittoriaAlata">GitHub</a></h2></li>
+            </ul>
+            <video controls autoplay>
+                <source src="Alexander.mp4" type="video/mp4">
+            </video>
+            <p><a href="https://drive.google.com/drive/folders/1KT6gkAcxoCnljm1m7zJ8Hce9UohzsbC6?usp=sharing">Achromatopsia</a></p>
+            <p><a href="ascii-art.html">Autore</a></p>
+            <hr>
+        </div>
+    </div>
+</body>
 </html>
