--- a/MAIN.html
+++ b/MAIN.html
@@ -22,16 +22,17 @@
     <div class="container">
         <img src="images/logo.png" width="400" height="300"/>
         <div class="content">
-            <h1 style="font-size: 57px;">Home Page - VittoriaAlata.github.io</h1>
+            <h1 style="font-size: 57px;">Home Page</h1>
             <ul>
                 <li><h2><a href="resourcepack.html">Resourcepacks</a></h2></li>
+                <li><h2><a href="roma.html">Roma</a></h2></li>
                 <li><h2><a href="https://github.com/VittoriaAlata">GitHub</a></h2></li>
             </ul>
-            <video controls autoplay>
+            <!--<video controls autoplay>
                 <source src="Alexander.mp4" type="video/mp4">
-            </video>
-            <p><a href="https://drive.google.com/drive/folders/1KT6gkAcxoCnljm1m7zJ8Hce9UohzsbC6?usp=sharing">Achromatopsia</a></p>
-            <p><a href="ascii-art.html">Autore</a></p>
+            </video>-->
+            <!--<p><a href="https://drive.google.com/drive/folders/1KT6gkAcxoCnljm1m7zJ8Hce9UohzsbC6?usp=sharing">Achromatopsia</a></p>-->
+            <p><a href="ascii-art.html">Autrice</a></p>
             <hr>
         </div>
     </div>
