--- a/index.html
+++ b/index.html
@@ -7,34 +7,46 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons/favicon-16x16.png">
     <link rel="manifest" href="favicon_icons/site.webmanifest">
     <style>
+    @import url('https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&family=Playfair+Display&family=Zilla+Slab+Highlight&display=swap');
         /* Stili per il layout flessibile */
         .container {
             display: flex; /* Utilizza il layout flessibile */
             align-items: center; /* Allinea verticalmente al centro */
         }
-        .content {
+        .Home-Page {
             flex: 1; /* Flessibilità per adattarsi allo spazio disponibile */
             margin-left: 20px; /* Aggiunge uno spazio tra l'immagine e il testo */
         }
+        .playfair-display-Home-Page {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
     </style>
-</head>
-<body>
-    <div class="container">
-        <img src="images/logo.png" width="400" height="300"/>
-        <div class="content">
-            <h1 style="font-size: 57px;">Home Page</h1>
-            <ul>
-                <li><h2><a href="resourcepack.html">Resourcepacks</a></h2></li>
-                <li><h2><a href="roma.html">Roma</a></h2></li>
-                <li><h2><a href="https://github.com/VittoriaAlata">GitHub</a></h2></li>
-            </ul>
-            <!--<video controls autoplay>
-                <source src="Alexander.mp4" type="video/mp4">
-            </video>-->
-            <!--<p><a href="https://drive.google.com/drive/folders/1KT6gkAcxoCnljm1m7zJ8Hce9UohzsbC6?usp=sharing">Achromatopsia</a></p>-->
-            <p><a href="ascii-art.html">Autrice</a></p>
-            <hr>
+    <body>
+        <body BGCOLOR="#F8F8EE"></body>
+        <body text="#22346e"></body>
+        </body>
+    </body>
+        <div class="container">
+            <img src="images/logo.png" width="400" height="300"/>
+            <div class="playfair-display-Home-Page">
+                <h1 style="font-size: 57px;">Home Page</h1>
+                <ul>
+                    <li><h2><a href="resourcepack.html" style="text-decoration: none">Resourcepacks</a></h2></li>
+                    <li><h2><a href="roma.html" style="text-decoration: none" >Roma</a></h2></li>
+                    <li><h2><a href="https://github.com/VittoriaAlata" style="text-decoration: none">GitHub</a></h2></li>
+                    <li><h2><a href="./SYSCOM/ISTRUZIONI_SYSCOM.html" style="text-decoration: none;">SYSCOM</a></h2></li>
+                    <li><h2><a href="MdS.html" style="text-decoration: none;">Macchina da Scrivere</a></h2></li>
+                </ul>
+                <!--<video controls autoplay>
+                    <source src="Alexander.mp4" type="video/mp4">
+                </video>-->
+                <!--<p><a href="https://drive.google.com/drive/folders/1KT6gkAcxoCnljm1m7zJ8Hce9UohzsbC6?usp=sharing">Achromatopsia</a></p>-->
+                <p><a href="ascii-art.html" style="text-decoration: none">Autrice</a></p>
+                <hr>
+            </div>
         </div>
-    </div>
-</body>
+</head>
 </html>
