--- a/MdS.html
+++ b/MdS.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <title>Acquisto Macchina da Scrivere</title>
         <style>
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
