TITLE SCREEN Macchina da Scrivere.html

--- a/MdS.html
+++ b/MdS.html
@@ -45,7 +45,7 @@ body {
         </style>
     </head>
     <body>
-        <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da scrivere</p>
+        <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da Scrivere</p>
         <h1>Controlli da effettuare prima di acquistare una macchina da scrivere</h1>
         <p>In questo articolo tratteremo le cinque cose fondamentali da valutare prima di acquistare una macchina da scrivere. Questi controlli ti aiuteranno ad evitare spiacevoli sorprese.</p>
         <h2>1. Il corretto funzionamento del carrello</h2>
