FIX SYSCOM Istruzioni.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><h2><a href="resourcepack.html" style="text-decoration: none">Resourcepacks</a></h2></li>
                     <li><h2><a href="roma.html" style="text-decoration: none" >Roma</a></h2></li>
                     <li><h2><a href="https://github.com/VittoriaAlata" style="text-decoration: none">GitHub</a></h2></li>
-                    <li><h2><a href="./SYSCOM/ISTRUZIONI_SYSCOM.html" style="text-decoration: none;">SYSCOM</a></h2></li>
+                    <li><h2><a href="./SYSCOM/ISTRUZIONI_SYSCOM.HTML" style="text-decoration: none;">SYSCOM</a></h2></li>
                     <li><h2><a href="MdS.html" style="text-decoration: none;">Macchina da Scrivere</a></h2></li>
                 </ul>
                 <!--<video controls autoplay>
