--- a/SYSCOM/ISTRUZIONI_SYSCOM.HTML
+++ b/SYSCOM/ISTRUZIONI_SYSCOM.HTML
@@ -48,7 +48,19 @@
     <li>Dopo aver installato Powershell, puoi verificarne la versione digitando "<code>pwsh.exe</code>" nella barra di ricerca e premendo Invio.</li>
 </ul>
 
-<h2>2. Esegui il file SYSCOM.PS1</h2>
+<h2>2. Installa SYSCOM</h2>
+<ul>
+    <li>Scarica il file di installazione INSTALL.PS1 dal seguente link: <a href="INSERT_LINK_HERE" target="_blank">Scarica INSTALL.PS1</a>.</li>
+    <li>Salva il file in una cartella sul tuo computer.</li>
+    <li>Esegui il file di installazione con un doppio click o con il tasto Invio.</li>
+    <li>Scegli il percorso di istallazione di SYSCOM (è preferibile C:\SYSCOM)</li>
+    <li>Se l'installazione è avvenuta correttamente, verrà creata una scorciatoia al file SYSCOM sul desktop.</li>
+    <li>A questo punto basterà fare doppio click o battere Invio sulla scorciatoia per avviare SYSCOM</li>
+</ul>
+
+<h2>OPPURE</h2>
+
+<h2>3. Esegui il file SYSCOM.PS1</h2>
 <ol>
     <li>
         Naviga nella cartella SYSCOM locale.
@@ -81,7 +93,7 @@
 
 <h2>OPPURE</h2>
 
-<h2>3. Imposta Powershell 7.4.2 o versioni successive come app predefinita per i file .PS1</h2>
+<h2>4. Imposta Powershell 7.4.2 o versioni successive come app predefinita per i file .PS1</h2>
 <ol>
     <li>Fai clic con il tasto destro sul file SYSCOM.PS1.</li>
     <li>Seleziona "Apri con" e poi "Scegli un'altra app".</li>
@@ -90,7 +102,7 @@
     <li>Fai clic su "OK".</li>
 </ol>
 
-<h2>4. Apri il file SYSCOM.PS1 con un doppio clic</h2>
+<h2>5. Apri il file SYSCOM.PS1 con un doppio clic</h2>
 <ul>
     <li>Una volta impostato Powershell come app predefinita per i file .PS1, sarà sufficiente fare doppio clic sul file SYSCOM.PS1 per aprirlo.</li>
 </ul>
