--- a/SYSCOM/ISTRUZIONI_SYSCOM.HTML
+++ b/SYSCOM/ISTRUZIONI_SYSCOM.HTML
@@ -50,7 +50,7 @@
 
 <h2>2. Installa SYSCOM</h2>
 <ul>
-    <li>Scarica il file di installazione INSTALL.PS1 dal seguente link: <a href="INSERT_LINK_HERE" target="_blank">Scarica INSTALL.PS1</a>.</li>
+    <li>Scarica il file di installazione INSTALL.PS1 dal seguente link: <a href="vittoriaalata.github.io/VWS/SYSCOM/INSTALL.PS1" target="_blank">Scarica INSTALL.PS1</a>.</li>
     <li>Salva il file in una cartella sul tuo computer.</li>
     <li>Esegui il file di installazione con un doppio click o con il tasto Invio.</li>
     <li>Scegli il percorso di istallazione di SYSCOM (è preferibile C:\SYSCOM)</li>
