--- a/SYSCOM/ISTRUZIONI_SYSCOM.HTML
+++ b/SYSCOM/ISTRUZIONI_SYSCOM.HTML
@@ -50,10 +50,9 @@
 
 <h2>2. Installa SYSCOM</h2>
 <ul>
-    <li>Scarica il file di installazione INSTALL.PS1 dal seguente link: <a href=".\INSTALL.PS1" download="SYSCOM.Setup.PS1" target="_blank">Scarica INSTALL.PS1</a>.</li>
+    <li>Scarica il file di installazione INSTALL.PS1 dal seguente link: <a href=".\SYSCOM.MSI" download="SYSCOM.MSI" target="_blank">Pacchetto SYSCOM</a>.</li>
     <li>Salva il file in una cartella sul tuo computer.</li>
     <li>Esegui il file di installazione con un doppio click o con il tasto Invio.</li>
-    <li>Scegli il percorso di istallazione di SYSCOM (è preferibile C:\SYSCOM)</li>
     <li>Se l'installazione è avvenuta correttamente, verrà creata una scorciatoia al file SYSCOM sul desktop.</li>
     <li>A questo punto basterà fare doppio click o battere Invio sulla scorciatoia per avviare SYSCOM</li>
 </ul>
