--- a/SYSCOM/ISTRUZIONI_SYSCOM.HTML
+++ b/SYSCOM/ISTRUZIONI_SYSCOM.HTML
@@ -34,10 +34,19 @@
         li img {
             display: block; /* Imposta l'immagine come blocco */
         }
+        .homebutton {
+                display: flex; /* Utilizza il layout flessibile */
+                align-items: center; /* Allinea verticalmente al centro */
+                justify-content: center; /* Allinea orizzontalmente al centro */
+            }
     </style>
 </head>
 <body>
-
+    <div class="homebutton">
+        <a href="https://vittoriaalata.github.io/VWS/">
+            <img src="Assets/Libretto/logo.png" width="100" height="75"/>
+        </a>
+        </div>
 <h1>Libretto d'istruzioni per SYSCOM</h1>
 <p>Segui le seguenti istruzioni per utilizzare SYSCOM sul tuo computer.</p>
 
