--- a/MdS.html
+++ b/MdS.html
@@ -18,7 +18,7 @@ body {
 }
 .line-1 {
     position: relative;
-    top: 1%;  
+    top: 0.7%;  
     width: 24em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
@@ -28,6 +28,12 @@ body {
     overflow: hidden;
     transform: translateY(-50%);    
 }
+
+.homebutton {
+                display: flex; /* Utilizza il layout flessibile */
+                align-items: center; /* Allinea verticalmente al centro */
+                justify-content: center; /* Allinea orizzontalmente al centro */
+            }
 
 /* Animation */
 .anim-typewriter {
@@ -45,6 +51,11 @@ body {
         </style>
     </head>
     <body>
+      <div class="homebutton">
+        <a href="index.html">
+            <img src="images/logo.png" width="100" height="75"/>
+        </a>
+        </div>
         <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da Scrivere</p>
         <h1>Controlli da effettuare prima di acquistare una macchina da scrivere</h1>
         <p>In questo articolo tratteremo le cinque cose fondamentali da valutare prima di acquistare una macchina da scrivere. Questi controlli ti aiuteranno ad evitare spiacevoli sorprese.</p>
