--- a/roma.html
+++ b/roma.html
@@ -24,7 +24,7 @@
     </head>
     <body>
         <div class="container">
-            <a href="main.html">
+            <a href="index.html">
                 <img src="images/logo.png" width="100" height="75"/>
             </a>
         </div>
