SYSCOM Libretto FIX

--- a/SYSCOM/ISTRUZIONI_SYSCOM.HTML
+++ b/SYSCOM/ISTRUZIONI_SYSCOM.HTML
@@ -59,7 +59,7 @@
 
 <h2>2. Installa SYSCOM</h2>
 <ul>
-    <li>Scarica il file di installazione INSTALL.PS1 dal seguente link: <a href=".\SYSCOM.MSI" download="SYSCOM.MSI" target="_blank">Pacchetto SYSCOM</a>.</li>
+    <li>Scarica il file di installazione SYSCOM.MSI dal seguente link: <a href=".\SYSCOM.MSI" download="SYSCOM.MSI" target="_blank">Pacchetto SYSCOM</a>.</li>
     <li>Salva il file in una cartella sul tuo computer.</li>
     <li>Esegui il file di installazione con un doppio click o con il tasto Invio.</li>
     <li>Se l'installazione è avvenuta correttamente, verrà creata una scorciatoia al file SYSCOM sul desktop.</li>
