--- a/ISTRUZIONI_SYSCOM.HTML
+++ b/ISTRUZIONI_SYSCOM.HTML
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ISTRUZIONI PER SYSCOM</title>
+    <title>Manuale SYSCOM</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_icons/SYSCOM/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon_icons/SYSCOM/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon_icons/SYSCOM/favicon-16x16.png">
+<link rel="manifest" href="./favicon_icons/SYSCOM/site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-            background-color: #fafafa; /* Colore crema */
-        }
-
-        h1, h2 {
-            color: #333;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: 16px;
+            line-height: 1;
+            margin: 15px;
         }
 
         ul, ol {
@@ -27,7 +29,7 @@
         }
 
         code {
-            background-color: #f4f4f4;
+            background-color: #f4f4f421;
             padding: 2px 6px;
             border-radius: 4px;
         }
@@ -41,10 +43,10 @@
             }
     </style>
 </head>
-<body>
+<body BGCOLOR="#0c0c0c" text="#cccccc">
     <div class="homebutton">
         <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="Assets/Libretto/logo.png" width="100" height="75"/>
+            <img src="images/logo.png" width="100" height="100"/>
         </a>
         </div>
 <h1>Libretto d'istruzioni per SYSCOM</h1>
@@ -59,43 +61,48 @@
 
 <h2>2. Installa SYSCOM</h2>
 <ul>
-    <li>Scarica il file di installazione SYSCOM.MSI dal seguente link: <a href=".\SYSCOM.MSI" download="SYSCOM.MSI" target="_blank">Pacchetto SYSCOM</a>.</li>
+    <li>Scarica il file di installazione SYSCOM.MSI dal seguente link: <a href=".\SYSCOM.HTML">SYSCOM</a>.</li>
     <li>Salva il file in una cartella sul tuo computer.</li>
     <li>Esegui il file di installazione con un doppio click o con il tasto Invio.</li>
     <li>Se l'installazione è avvenuta correttamente, verrà creata una scorciatoia al file SYSCOM sul desktop.</li>
     <li>A questo punto basterà fare doppio click o battere Invio sulla scorciatoia per avviare SYSCOM</li>
 </ul>
-
-<h2>OPPURE</h2>
+<br>
+<br>
+<br>
+<br>
+<h2>Se qualcosa dovesse essere andato storto apri una issues su GitHub:</h3>
+<a href=https://github.com/VittoriaAlata/VWS/issues><img alt="Issues" src="https://img.shields.io/github/issues/VittoriaAlata/VWS?style=social&label=Issues&link=https://github.com/VittoriaAlata/VWS">
+<!--<h2>OPPURE</h2>
 
 <h2>3. Esegui il file SYSCOM.PS1</h2>
 <ol>
     <li>
         Naviga nella cartella SYSCOM locale.
-        <img src=".\Assets\Libretto\1.jpg" width="960" height="600">
+        <img src=".\Libretto\1.jpg" width="960" height="600">
     </li>
     <li>
         Fai click sul pannello del percorso.
-        <img src=".\Assets\Libretto\2.jpg" width="960" height="600">
+        <img src=".\Libretto\2.jpg" width="960" height="600">
     </li>
     <li>
         Apri Powershell battendo nella barra del percorso "<code>pwsh</code>" e premi Invio.
-        <img src=".\Assets\Libretto\3.jpg" width="960" height="600">
+        <img src=".\Libretto\3.jpg" width="960" height="600">
     </li>
     <li>
         Verrà aperta una finestra del terminale di Powershell.
-        <img src=".\Assets\Libretto\4.jpg" width="960" height="600">
+        <img src=".\Libretto\4.jpg" width="960" height="600">
     </li>
     <li>
         Batti il comando <code>.\SYSCOM.PS1</code> e premi Invio.
-        <img src=".\Assets\Libretto\5.jpg" width="960" height="600">
+        <img src=".\Libretto\5.jpg" width="960" height="600">
     </li>
     <li>
         CONSENTI AL PROGRAMMA DI APPORTARE MODIFICHE AL DISPOSITIVO
     </li>
     <li>
         Se hai eseguito correttamente le operazioni avrai questa schermata.
-        <img src=".\Assets\Libretto\6.jpg" width="960" height="600">
+        <img src=".\Libretto\6.jpg" width="960" height="600">
     </li>
 </ol>
 
@@ -113,7 +120,6 @@
 <h2>5. Apri il file SYSCOM.PS1 con un doppio clic</h2>
 <ul>
     <li>Una volta impostato Powershell come app predefinita per i file .PS1, sarà sufficiente fare doppio clic sul file SYSCOM.PS1 per aprirlo.</li>
-</ul>
-
+</ul>-->
 </body>
 </html>
