--- a/MdS.html
+++ b/MdS.html
@@ -2,6 +2,14 @@
 <html>
     <head>
       <title>Acquisto Macchina da Scrivere</title>
+      <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons//apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="favicon_icons//favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons//favicon-16x16.png">
+      <link rel="manifest" href="favicon_icons//site.webmanifest">
+      <link rel="mask-icon" href="favicon_icons//safari-pinned-tab.svg" color="#5bbad5">
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="theme-color" content="#ffffff">
+      
         <style>
 @import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
@@ -53,7 +61,7 @@ body {
     <body>
       <div class="homebutton">
         <a href="index.html">
-            <img src="images/logo.png" width="100" height="75"/>
+            <img src="images/logo.png" width="100" height="100"/>
         </a>
         </div>
         <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da Scrivere</p>
