--- a/SYSCOM.HTML
+++ b/SYSCOM.HTML
@@ -162,7 +162,7 @@
         <img src="images/SYSCOM-front.png" width="707.7" height="484.7"/>
     </a>
     <div class="button-container">
-        <a href=".\ISTRUZIONI_SYSCOM.HTML" download="SYSCOM.MSI" target="_blank" class="no-link-style">
+        <a href=".\ISTRUZIONI_SYSCOM.HTML" class="no-link-style">
             <button class="INS" role="button">
                 Manuale
             </button>
