--- a/SYSCOM.HTML
+++ b/SYSCOM.HTML
@@ -174,6 +174,8 @@
             </button>
         </a>
     </div>
-    <h3 align="center" class="courier-prime-regular">Versione 0.0.3</h4>
+    <a href=".\SYSCOM\SYSCOM.MSI" download="SYSCOM.MSI" target="_blank" class="no-link-style">
+    <h3 align="center" class="courier-prime-regular">Versione 0.0.3</h3>
+    </a>
 </body>
 </html>
