--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body BGCOLOR="#fffeef" text="#22346e">
     <div class="container">
-        <img src="images/logo.png" width="800" height="800"/>
+        <img src="images/logo.png" width="800" height="800">
         <div class="Home-Page playfair-display-home-page">
             <h1 style="font-size: 114px;">Vittoria Web</h1>
             <ul style="font-size: 22px;">
