--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
             text-decoration: none;
             color: inherit;
         }
-        .link-crediti {
-            display: flex;
-            gap: 10px; /* Spazio tra i link */
-        }
     </style>
 </head>
 <body BGCOLOR="#fffeef" text="#22346e">
@@ -54,15 +50,12 @@
         <div class="Home-Page playfair-display-home-page">
             <h1 style="font-size: 114px;">Vittoria Web</h1>
             <ul style="font-size: 22px;">
+                <li><h2><a href="./SYSCOM" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
                 <li><h2><a href="https://modrinth.com/user/Vittoria" style="text-decoration: none" class="no-link-color">Resourcepacks</a></h2></li>
-<!--                <li><h2><a href="roma.html" style="text-decoration: none" class="no-link-color">Roma</a></h2></li> -->
-                <li><h2><a href="SYSCOM.HTML" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
-                <li><h2><a href="MdS.html" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
+                <li><h2><a href="./AUTOCAD" style="text-decoration: none;" class="no-link-color">Progetti AutoCAD</a></h2></li>
+                <li><h2><a href="./MdS" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
             </ul>
-            <div class="link-crediti">
-                <h3><a href="https://github.com/VittoriaAlata" class="no-link-color">GitHub</a></h3>
-                <h3><a href="ascii-art.html" class="no-link-color">Autrice</a></h3>
-            </div> 
+                <h3 style="text-align: center;"><a href="./autrice" class="no-link-color">Autrice</a></h3>
           <hr class="small-hr">
         </div>
     </div>
