--- a/MdS.html
+++ b/MdS.html
@@ -60,7 +60,7 @@ body {
     </head>
     <body>
       <div class="homebutton">
-        <a href="index.html">
+        <a href="vittoriaalata.github.io/VWS">
             <img src="images/logo.png" width="100" height="100"/>
         </a>
         </div>
@@ -87,6 +87,6 @@ body {
         <p>Ispeziona la carrozzeria per eventuali danni o segni di ruggine, soprattutto nelle macchine prodotte durante la seconda guerra mondiale. Se la ruggine è marginale e il prezzo è buono, potrebbe comunque valere l'acquisto.</p>
         <h2>Conclusioni</h2>
         <p>Controllare attentamente una macchina da scrivere prima di acquistarla ti permetterà di fare un acquisto consapevole e di evitare problemi futuri. Segui questi consigli e sarai in grado di trovare una macchina da scrivere funzionante e di valore.</p>
-        <h3><a href="./MDS/Credits.html" style="text-decoration: none">Crediti</a></h3>
+        <h3><a href="./MDS/Credits" style="text-decoration: none">Crediti</a></h3>
     </body>
 </html>
