--- a/SYSCOM.HTML
+++ b/SYSCOM.HTML
@@ -159,10 +159,10 @@
     </div>
     <h1 align="center" class="courier-prime-regular">SYSCOM, per la gestione di Windows</h1>
     <a class="homebutton">
-        <img src="images/SYSCOM-front.png" width="707.7" height="484.7"/>
+        <img src=".\images\SYSCOM-front.png" width="707.7" height="484.7"/>
     </a>
     <div class="button-container">
-        <a href=".\ISTRUZIONI_SYSCOM.HTML" class="no-link-style">
+        <a href=".\Libretto-SYSCOM" class="no-link-style">
             <button class="INS" role="button">
                 Manuale
             </button>
