--- a/MdS.html
+++ b/MdS.html
@@ -60,8 +60,8 @@ body {
     </head>
     <body>
       <div class="homebutton">
-        <a href="vittoriaalata.github.io/VWS">
-            <img src="images/logo.png" width="100" height="100"/>
+        <a href="https://vittoriaalata.github.io/VWS/">
+            <img src="https://vittoriaalata.github.io/VWS/images/logo.png" width="100" height="100"/>
         </a>
         </div>
         <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da Scrivere</p>
@@ -87,6 +87,6 @@ body {
         <p>Ispeziona la carrozzeria per eventuali danni o segni di ruggine, soprattutto nelle macchine prodotte durante la seconda guerra mondiale. Se la ruggine è marginale e il prezzo è buono, potrebbe comunque valere l'acquisto.</p>
         <h2>Conclusioni</h2>
         <p>Controllare attentamente una macchina da scrivere prima di acquistarla ti permetterà di fare un acquisto consapevole e di evitare problemi futuri. Segui questi consigli e sarai in grado di trovare una macchina da scrivere funzionante e di valore.</p>
-        <h3><a href="./MDS/Credits" style="text-decoration: none">Crediti</a></h3>
+        <h3 style="text-align: 	center;"><a href="./MDS/Credits" style="text-decoration: none">Crediti</a></h3>
     </body>
 </html>
