--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <li><h2><a href="./SYSCOM" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
                 <li><h2><a href="https://modrinth.com/user/Vittoria" style="text-decoration: none" class="no-link-color">Resourcepacks</a></h2></li>
                 <li><h2><a href="./AUTOCAD" style="text-decoration: none;" class="no-link-color">Progetti AutoCAD</a></h2></li>
-                <li><h2><a href="./MDS" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
+                <li><h2><a href="./MdS" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
             </ul>
                 <h3 style="text-align: center;"><a href="./autrice" class="no-link-color">Autrice</a></h3>
           <hr class="small-hr">
