--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
             display: flex; /* Utilizza il layout flessibile */
             align-items: center; /* Allinea verticalmente al centro */
             flex-wrap: wrap; /* Permette agli elementi di andare a capo se non c'è abbastanza spazio */
-        }
-        .Home-Page {
             flex: 1; /* Flessibilità per adattarsi allo spazio disponibile */
-            margin-left: 20px; /* Aggiunge uno spazio tra l'immagine e il testo */
+            margin-left: 40px; /* Aggiunge uno spazio tra l'immagine e il testo */
         }
         .playfair-display-home-page {
             font-family: 'Playfair Display', serif;
@@ -35,9 +33,10 @@
             text-rendering: optimizeLegibility;
         }
         .small-hr {
-            width: 50%; /* Specifica la larghezza desiderata */
+            width: 300px; /* Specifica la larghezza desiderata */
             margin: 20px auto; /* Centra l'elemento orizzontalmente */
             border: 1px solid #22346e; /* Puoi personalizzare lo stile del bordo */
+            align-items: center; /* Allinea verticalmente al centro */
         }
         .no-link-color {
             text-decoration: none;
@@ -46,10 +45,6 @@
         @media (max-width: 600px) {
     .container {
         flex-direction: column; /* Imposta la direzione principale del layout flessibile in verticale */
-    }
-    .Home-Page {
-        margin-left: 0; /* Rimuove lo spazio a sinistra */
-        text-align: center; /* Centra il testo */
     }
 }
     </style>
