--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             align-items: center; /* Allinea verticalmente al centro */
             flex-wrap: wrap; /* Permette agli elementi di andare a capo se non c'è abbastanza spazio */
             flex: 1; /* Flessibilità per adattarsi allo spazio disponibile */
-            margin-left: 40px; /* Aggiunge uno spazio tra l'immagine e il testo */
+            margin-top: 30px; /* Aggiunge uno spazio tra l'immagine e il testo */
         }
         .playfair-display-home-page {
             font-family: 'Playfair Display', serif;
@@ -45,6 +45,7 @@
         @media (max-width: 600px) {
     .container {
         flex-direction: column; /* Imposta la direzione principale del layout flessibile in verticale */
+        margin-left: 50%; /* Aggiunge uno spazio tra l'immagine e il testo */
     }
 }
     </style>
