--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             display: flex; /* Utilizza il layout flessibile */
             align-items: center; /* Allinea verticalmente al centro */
             flex-wrap: wrap; /* Permette agli elementi di andare a capo se non c'è abbastanza spazio */
-            margin-top: 30px; /* Aggiunge uno spazio tra l'immagine e il testo */
+            margin-top: 30px;
+            margin-left: 30px;
         }
         .playfair-display-home-page {
             font-family: 'Playfair Display', serif;
@@ -41,17 +42,16 @@
             text-decoration: none;
             color: inherit;
         }
-        @media (max-width: 750px) {
+        @media (max-width: 600px) {
     .container {
         flex-direction: column; /* Imposta la direzione principale del layout flessibile in verticale */
-        margin-left: 50%; /* Aggiunge uno spazio tra l'immagine e il testo */
     }
 }
     </style>
 </head>
 <body BGCOLOR="#fffeef" text="#22346e">
     <div class="container">
-        <img src="images/logo.png" width="800" height="800">
+        <img src="images/logo.png" width="750" height="750">
         <div class="Home-Page playfair-display-home-page">
             <h1 style="font-size: 114px;">Vittoria Web</h1>
             <ul style="font-size: 22px;">
