--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         @media (max-width: 600px) {
     .container {
         flex-direction: column; /* Imposta la direzione principale del layout flessibile in verticale */
+        margin-top: 85px;
+        margin-left: 85px;
     }
 }
     </style>
