--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             display: flex; /* Utilizza il layout flessibile */
             align-items: center; /* Allinea verticalmente al centro */
             flex-wrap: wrap; /* Permette agli elementi di andare a capo se non c'è abbastanza spazio */
-            margin-top: 45px;
-            margin-left: 45px;
+            margin-top: 2.55%;
+            margin-left: 2.55%;
         }
         .playfair-display-home-page {
             font-family: 'Playfair Display', serif;
