--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     .container {
         flex-direction: column; /* Imposta la direzione principale del layout flessibile in verticale */
         margin-top: 20.55%;
-        margin-left: 5.55%;
+        margin-left: 2.55%;
+        zoom: 0.5;
     }
 }
     </style>
