--- a/SYSCOM/MANUALE-SYSCOM-CLI.html
+++ b/SYSCOM/MANUALE-SYSCOM-CLI.html
@@ -50,7 +50,7 @@
 <body BGCOLOR="#0c0c0c" text="#cccccc">
     <div class="homebutton">
         <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="images/logo.png" width="100" height="100"/>
+            <img src="https://vittoriaalata.github.io/VWS/images/logo.png" width="100" height="100"/>
         </a>
         </div>
 <h1>Libretto d'istruzioni per SYSCOM</h1>
@@ -68,34 +68,34 @@
 <div class="step">
   <h2>Passo 1: Installazione di SYSCOM</h2>
   <p>Fai doppio click sul file <span class="important">SYSCOM.msi</span> per iniziare l'installazione.</p>
-  <img src="Libretto/MSI Download.png" alt="Doppio click su SYSCOM.msi">
-  <img src="Libretto/INSTALLATION.png" alt="Installa SYSCOM e accetta la Autorizzazione">
+  <img src="https://vittoriaalata.github.io/VWS/Libretto/MSI Download.png" alt="Doppio click su SYSCOM.msi">
+  <img src="https://vittoriaalata.github.io/VWS/Libretto/INSTALLATION.png" alt="Installa SYSCOM e accetta la Autorizzazione">
 </div>
 
 
 <div class="step">
   <h2>Passo 2: Avvio di SYSCOM</h2>
   <p>Dopo l'installazione, fai doppio click sul collegamento di SYSCOM sul desktop per avviare il programma.</p>
-  <img src="Libretto/SHORTCUT.png" alt="Doppio click sul collegamento di SYSCOM">
+  <img src="https://vittoriaalata.github.io/VWS/Libretto/SHORTCUT.png" alt="Doppio click sul collegamento di SYSCOM">
 </div>
 
 <div class="step">
   <h2>Passo 3: Autorizzazione dell'esecuzione dello script</h2>
   <p>Quando richiesto, autorizza l'esecuzione dello script con la firma specifica.</p>
-  <img src="Libretto/CERT ACCEPT.png" alt="Autorizzazione script">
+  <img src="https://vittoriaalata.github.io/VWS/Libretto/CERT ACCEPT.png" alt="Autorizzazione script">
 </div>
 
 <div class="step">
   <h2>Passo 4: Conferma delle modifiche</h2>
   <p>Se viene richiesto di apportare modifiche al tuo sistema, clicca <span class="important">Sì</span> per confermare.</p>
-  <img src="Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
+  <img src="https://vittoriaalata.github.io/VWS/Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
 </div>
 
 <div class="step">
     <h2>Passo 5: Avvia SYSCOM</h2>
     <p>Se viene richiesto di apportare modifiche al tuo sistema, clicca <span class="important">Sì</span> per confermare.</p>
-    <img src="Libretto/SHORTCUT.png" alt="Conferma modifiche sistema">
-    <img src="Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
+    <img src="https://vittoriaalata.github.io/VWS/Libretto/SHORTCUT.png" alt="Conferma modifiche sistema">
+    <img src="https://vittoriaalata.github.io/VWS/Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
 </div>
 
 <!--<h2>2. Installa SYSCOM</h2>
