Fix svg file senza trattini non riconosciuti dal Server

--- a/SYSCOM.html
+++ b/SYSCOM.html
@@ -386,7 +386,7 @@
         <h3 class="courier-prime-regular">Versione 0.0.5-beta</h3>
         <h2 class="courier-prime-regular">Avanzamento attuale:</h4>
         <div class="image-container">
-        <img src=".\images\SYSCOM - TUI - Stato attuale.svg">
+        <img src=".\images\SYSCOM-TUI-Stato-attuale.svg">
         </div>
     </div>
 
@@ -426,7 +426,7 @@
         <h3 class="courier-prime-regular">Versione 0.0.4</h3>
         <h2 class="courier-prime-regular">Avanzamento attuale:</h4>
         <div class="image-container">
-            <img src=".\images\SYSCOM - CLI - Stato attuale.svg">
+            <img src=".\images\SYSCOM-CLI-Stato-attuale.svg">
             </div>
     </div>
     </div>
